# fps-paintball-wildwest

./: .gitignore  Cargo.toml  build.rs
src/: ai.rs  main.rs  player.rs  screenshot.rs  ui.rs  weapon.rs  world.rs
